# beeai

./: MAINTAINERS.md  README.md  agent-registry-local-guide.md  agent-registry.yaml  docker-compose.yml  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  provider-registry-docker.yaml  provider-registry.yaml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: acp-python-sdk.yml  acp-typescript-sdk.yml  beeai-sdk.yml  beeai-server.yml  beeai-web.yml  common.yml  pr.yml
agents/community/aider/: pyproject.toml
agents/community/aider-agent/: README.md  beeai-provider-docker.yaml  beeai-provider.yaml  pyproject.toml
agents/community/autogen-agents/: beeai-provider-docker.yaml  pyproject.toml  (+1 more)
agents/community/gpt-researcher/: .env  README.md  gpt_researcher_agent.py  pyproject.toml
apps/api/: pyproject.toml
apps/beeai-cli/: pyproject.toml
apps/beeai-server/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  run_server.py  tasks.toml
apps/beeai-ui/: README.md  index.html  package.json  tasks.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/beeai-web/: .env.example  Dockerfile  package.json  tasks.toml
apps/cli/: pyproject.toml
apps/cli/src/beeai_cli/: __init__.py
docs/: docs.json
docs/agents/: community-list.mdx  official-list.mdx
docs/concepts/: components.mdx  providers.mdx
docs/get-started/: installation.mdx  quickstart.mdx
docs/how-to/: compose-agents.mdx  import-agents.mdx  run-agents.mdx
docs/introduction/: installation.mdx  welcome.mdx
docs/observability/: custom-agent-traceability.mdx
(+381 files in other folders)
