[project]
name = "beeai-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Radek Ježek", email = "radek.jezek@ibm.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
beeai-cli = "beeai_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
