[project]
name = "gpt-researcher-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukáš Janeček",email = "xjacka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "agentcommunicationprotocol (>=0.0.3,<0.0.4)",
    "gpt-researcher (>=0.10.11,<0.11.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "duckduckgo-search (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
